# Kinova-kortex2_Gen3_G3L

./: .gitignore  BRANDING_MODIFICATIONS_SUMMARY.md  LICENSE  contribute.md  package-lock.json  package.json  readme.md  run_example.py  template_bug_report.md  template_enhancement_request.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-enhancement-request.md
React Projects/: package-lock.json  package.json
api_cpp/doc/markdown/: index.md
api_cpp/examples/: CMakeLists.txt  readme.md  utilities.cpp  utilities.h
api_cpp/examples/000-Getting_started/: 01-api_creation.cpp  01_api_creation.cpp  02-protobuf_object_manipulation.cpp  02_protobuf_object_manupulating.cpp  03-api_mechanism.cpp  03_api_mechanism.cpp  04-error_management.cpp  04_error_management.cpp  05-notification.cpp  05_notification.cpp  06-getting_started.cpp  CMakeLists.txt
api_cpp/examples/100-BaseGen3_overview/: 01-devices_routing.cpp  01_devices_routing.cpp  02-protection_zones_configuration.cpp
api_cpp/examples/100-Overview/: 01-devices_routing.cpp  02-protection_zones_configuration.cpp
api_cpp/examples/102-BaseGen3_ctrl/: 01-move_angular_and_cartesian.cpp  02-sequence.cpp  03-twist_command.cpp  04-send_joint_speed.cpp  04-send_joint_speeds.cpp  CMakeLists.txt
api_cpp/examples/102-High_level_movement/: 01-move_angular_and_cartesian.cpp  02-sequence.cpp  03-twist_command.cpp  04-send_joint_speeds.cpp
api_cpp/examples/102-Movement_high_level/: 01-move_angular_and_cartesian.cpp  02-sequence.cpp  03-twist_command.cpp  04-send_joint_speeds.cpp  05-movement_high_level.cpp
api_cpp/examples/103-BaseGen3_uart_bridge/: 01-uart_bridge.cpp
api_cpp/examples/103-Gen3_uart_bridge/: 01-uart_bridge.cpp
api_cpp/examples/104-BaseGen3_gpio_bridge/: 01-gpio_bridge.cpp
api_cpp/examples/104-BaseGen3_gpio_bridge/arduino_gpio_example_firmware/: arduino_gpio_example_firmware.ino
api_cpp/examples/104-Gen3_gpio_bridge/: 01-gpio_bridge.cpp
api_cpp/examples/105-BaseGen3_i2c_bridge/: 01-i2c_bridge.cpp
api_cpp/examples/105-Gen3_i2c_bridge/: 01-i2c_bridge.cpp
api_cpp/examples/106-Gripper_command/: 01-gripper_command.cpp
api_cpp/examples/107-BaseGen3_gripper_low_level/: 01-gripper_low_level_command.cpp
api_cpp/examples/107-Gripper_low_level_command/: 01-gripper_low_level_command.cpp
api_cpp/examples/108-BaseGen3_torque_control/: 01-torque_control_cyclic.cpp
api_cpp/examples/108-Gen3_torque_control/: 01-torque_control_cyclic.cpp
api_cpp/examples/109-BaseGen3_ethernet_bridge/: 01-ethernet_bridge_configuration.cpp
api_cpp/examples/109-Gen3_ethernet_bridge/: 01-ethernet_bridge_configuration.cpp  readme.md
api_cpp/examples/110-Waypoints/: 01-send_angular_wapoint_trajectory.cpp  02-send_cartesian_waypoint_trajectory.cpp
api_cpp/examples/111-Kinematics/: 01-compute-kinematics.cpp
api_cpp/examples/200-Actuator_low_level_control/: 01-actuator_low_level_velocity_control.cpp
api_cpp/examples/200-BaseGen3_actuator_low_level/: 01-actuator_low_level_velocity_control.cpp
api_cpp/examples/200-BaseGen3_low_level_cyclic/: 01-complete_low_level_cyclic.cpp  01-low_level_cyclic.cpp  CMakeLists.txt
api_cpp/examples/300-BaseGen3_low_level_bypass/: 01-complete_cyclic_control.cpp  CMakeLists.txt  demo.txt
api_cpp/examples/500-Gen3_vision_configuration/: 01_vision_intrinsics.cpp  02_vision_extrinsics.cpp  03_vision_sensor_focus_action.cpp  04_vision_sensor_options.cpp
api_cpp/examples/500-Vision/: 01-vision.cpp  01_vision.cpp  02_vision_extrinsics.cpp  04_vision_sensor_options.cpp
api_cpp/examples/Classes/include/: KortexRobot.h
api_cpp/examples/Classes/src/: KortexRobot.cpp
api_cpp/examples/Integration/: FullExample.cpp
api_cpp/examples/kortex_api/: readme.md
api_cpp/examples/scripts/: build-gcc.sh  build-mingw.bat  build-msvc.bat  download_kortex_api.bat  download_kortex_api.sh
api_cpp/gen3_6DoF_leader_follower_example/: README.md  api_setup.cpp  arm_core_functions.cpp  leader.cpp
api_cpp/gen3_6DoF_leader_follower_example/include/: api_setup.hpp
api_cpp/gen3_lite_leader_follower_example/: CMakeLists.txt  README.md  api_setup.cpp  arm_core_functions.cpp  leader.cpp
api_cpp/gen3_lite_leader_follower_example/include/: api_setup.hpp  arm_core_functions.hpp
api_python/doc/markdown/: index.md
api_python/examples/: Cyberpunk Test.py  Cyberpunk Test2.py  cyberpunk_test_2.py  readme.md  robotics_test.py  server.py  utilities.py
api_python/examples/000-Getting_Started/: 01-api_creation.py  02-protobuf_object_manipulating.py  02-protobuf_object_manipulation.py  03-api_mechanism.py  04-error_management.py  05-notification.py
api_python/examples/100-BaseGen3_overview/: 01-devices_routing.py  02-protection_zones_configuration.py
api_python/examples/100-Overview/: 01-devices_routing.py  02-protection_zones_configuration.py
api_python/examples/102-BaseGen3_ctrl/: 01-move_angular_and_cartesian.py  02-sequence.py  03-twist_command.py  04-send_joint_speed.py  04-send_joint_speeds.py
api_python/examples/102-Movement_high_level/: 01-move_angular_and_cartesian.py  02-sequence.py  03-twist_command.py  04-send_joint_speeds.py
api_python/examples/103-BaseGen3_uart_bridge/: 01-uart_bridge.py
api_python/examples/103-Gen3_uart_bridge/: 01-uart_bridge.py
api_python/examples/104-BaseGen3_gpio_bridge/: 01-gpio_bridge.py
api_python/examples/104-Gen3_gpio_bridge/: 01-gpio_bridge.py
api_python/examples/105-BaseGen3_i2c_bridge/: 01-i2c_bridge.py
api_python/examples/105-Gen3_i2c_bridge/: 01-i2c_bridge.py
api_python/examples/106-BaseGen3_gripper_command/: 01-gripper_command.py
linked_md/: NotificationTopics.md  cpp_api_mechanism.md  cpp_device_routing.md  cpp_error_management.md  cpp_servoing_modes.md  cpp_transport_router_session_notif.md  modbus_icd.md  py_device_routing.md  py_transport_router_session_notif.md  python_api_mechanism.md  python_device_routing.md  python_error_management.md  python_quick_start.md  python_servoing_modes.md  python_transport_router_session_notif.md
modbus/examples/: readme.md  requirements.txt
web-app/: package-lock.json  package.json
web-app/src/: App.css  App.js
(+1489 files in other folders)
